@@ -3,7 +3,6 @@ package org.tkit.onecx.bookmark.bff.rs.mappers;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -46,8 +45,7 @@ public interface BookmarkMapper {
     default List<EximBookmarkDTO> map(List<EximBookmark> bookmarks) {
         return bookmarks.stream()
                 .sorted(Comparator.comparingInt(EximBookmark::getPosition))
-                .map(this::map)
-                .collect(Collectors.toList());
+                .map(this::map).toList();
     }
 
     List<EximBookmark> mapEximDTOList(List<EximBookmarkDTO> bookmarks);
